# Ohjelmistotekniikka_sovellus

./: .gitignore  README.md  main.py  tasks.py
application/: .coveragerc  .pylintrc  maarittelydokumentti.md  pyproject.toml  tasks.py
application/dokumentaatio/: changelog.md  graph.md  käyttöohje.md  maarittelydokumentti.md  sovellusarkkitehtuuri.md  tekoälyn_käyttö.md  testaus.md  tuntikirjanpito.md
application/src/: game.py  gamelogic.py  gameloop.py  logic.py  main.py  tasks.py  tetromino.py  ui.py  userinterface.py
application/src/logic/: game.py  gameloop.py  map.py  tetromino.py
application/src/tests/: game_test.py  gamelogic_test.py  userinterface_test.py
dokumentaatio/: changelog.md  tuntikirjanpito.md
laskarit/: viikko1.md
laskarit/viikko2/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: UML-kaavio.md  sekvenssikaavio.md
