[tool.poetry]
name = "tetris"
version = "0.1.0"
description = ""
authors = ["Louko <touko.t.toivonen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
invoke = "^2.2.1"
cowsay = "^6.1"
tk = "^0.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
coverage = "^7.11.3"
pylint = "^4.0.3"
autopep8 = "^2.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
